Upated to alpha-5 structure

--- a/CoreWeb/assets/less/style.less
+++ b/CoreWeb/assets/less/style.less
@@ -146,6 +146,21 @@
 }
 
 //
+// Teasers
+//
+.teasers {
+    background: #f2f2f2;
+    border-bottom: 1px solid #ddd;
+    margin: -25px 0 15px;
+    padding: 30px 0;
+
+    .container {
+        max-width: 960px;
+        text-align: center;
+    }
+}
+
+//
 // Footer
 //
 footer {
