--- a/CoreWeb/assets/less/typography.less
+++ b/CoreWeb/assets/less/typography.less
@@ -1,7 +1,7 @@
-﻿//
+//
 // Typography
 //
-// Copyright (c) 2017 Håkan Edling
+// Copyright (c) 2016 Håkan Edling
 //
 
 @import "variables.less";
@@ -16,38 +16,30 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: bold;
     margin-bottom: 20px;
 }
-
 h1, .h1 {
     font-size: 42px;
 }
-
 h2, .h2 {
     font-size: 34px;
     border-bottom: solid 1px @colorBorder;
     margin-bottom: 10px;
     padding-bottom: 10px;
 }
-
 h3, .h3 {
     font-size: 28px;
 }
-
 h4, .h4 {
     font-size: 24px;
 }
-
 h5, .h5 {
     font-size: 20px;
 }
-
 h6, .h6 {
     font-size: 18px;
 }
-
 p, ul, ol {
     margin-bottom: 20px;
 }
-
 .post-meta {
     color: #999;
 }
