--- a/CoreWeb/Views/Cms/TeaserPage.cshtml
+++ b/CoreWeb/Views/Cms/TeaserPage.cshtml
@@ -2,6 +2,9 @@
 @{
     ViewBag.Title = Model.Title;
 }
+@section meta {
+    @Html.Partial("Partial/_PageMeta", Model)
+}
 
 @Html.Partial("Partial/Teasers", Model.Teasers)
 
