--- a/CoreWeb/Views/Shared/_Layout.cshtml
+++ b/CoreWeb/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     @RenderSection("meta", required: false)
-
+    
     <title>@ViewBag.Title</title>
 
     <link href="//fonts.googleapis.com/css?family=Gentium+Book+Basic:700" rel="stylesheet">
@@ -21,6 +21,7 @@
 
 <body>
     <div class="banner @(ViewBag.IsStart != null && ViewBag.IsStart == true ? "startpage" : "")" role="banner">
+        <div class="bg"></div>
         @if (ViewBag.IsStart != null && ViewBag.IsStart == true) {
             <h1>
                 @ViewBag.Title
@@ -31,6 +32,7 @@
                 }
             </h1>
         }
+        @RenderSection("submenu", required: false)
     </div>
     <div class="header clearfix">
         <div class="container">
