--- a/CoreWeb/assets/less/style.less
+++ b/CoreWeb/assets/less/style.less
@@ -25,16 +25,32 @@
 }
 
 .banner {
-    background: url('../img/seigaiha-blue.jpg');
+    background: #2a88ae; /* Old browsers */
+    background: -moz-linear-gradient(-45deg,  #2a88ae 0%, #2989d8 35%, #207cca 65%, #96518c 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(-45deg,  #2a88ae 0%,#2989d8 35%,#207cca 65%,#96518c 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(135deg,  #2a88ae 0%,#2989d8 35%,#207cca 65%,#96518c 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2a88ae', endColorstr='#96518c',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
     position: relative;
-    height: 90px;
+    min-height: 90px;
     overflow: hidden;
+    padding-top: 70px;
+    border-bottom: 1px solid #fff;
     margin-bottom: 25px;
+
+    .bg {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: url('../img/seigaiha-overlay.png');
+    }
 
     &.startpage {
         height: 60vh;
         max-height: 900px;
         min-height: 240px;
+        box-shadow: 0 0 40px rgba(0,0,0,0.3);
     }
 
     img {
@@ -67,20 +83,30 @@
 }
 
 .submenu {
-    position: absolute;
-    height: 76px;
-    width: 100%;
-    top: 76px;
-    left: 0;
-    z-index: 1000;
-
     ul {
-        margin-top: 18px;
+        margin: 10px 0;
 
-        a {
-            color: #fff;
-            font-size: 14px;
-            text-transform: uppercase;
+        li {
+            a {
+                color: #fff;
+                font-size: 14px;
+                text-transform: uppercase;
+            }
+
+            &.active, &.active-child {
+                a {
+                    color: #fff;
+                    background: inherit;
+
+                    &:before {
+                        .arrow(#fff, 10px, 20px)
+                    }
+
+                    &:hover {
+                        background: inherit;
+                    }
+                }
+            }
         }
     }
 }
@@ -151,12 +177,24 @@
 .teasers {
     background: #f2f2f2;
     border-bottom: 1px solid #ddd;
-    margin: -25px 0 15px;
+    margin: -25px 0 20px;
     padding: 30px 0;
 
     .container {
         max-width: 960px;
         text-align: center;
+
+        img {
+            max-width: 40%;
+            margin-bottom: 20px;
+            opacity: 0.8;
+            transition: opacity ease-in-out 0.2s;
+
+            &:hover {
+                opacity: 1;
+                transition: opacity ease-in-out 0.2s;
+            }
+        }
     }
 }
 
