Updated to beta1

--- a/CoreWeb/Views/Shared/Partial/_Menu.cshtml
+++ b/CoreWeb/Views/Shared/Partial/_Menu.cshtml
@@ -1,4 +1,4 @@
-﻿@inject Piranha.Api Api
+﻿@inject Piranha.IApi Api
 @{
     var sitemap = Api.Sites.GetSitemap();
     var currentPage = ViewBag.CurrentPage;
