--- a/CoreWeb/Views/Cms/Page.cshtml
+++ b/CoreWeb/Views/Cms/Page.cshtml
@@ -24,7 +24,7 @@
     };    
 }
 @section meta {
-    @Html.Partial("Partial/_PageMeta", Model)
+    @Html.Partial("Partial/_Meta", Model)
 }
 
 @section submenu {
