--- a/CoreWeb/Views/Cms/TeaserPage.cshtml
+++ b/CoreWeb/Views/Cms/TeaserPage.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = Model.Title;
 }
 @section meta {
-    @Html.Partial("Partial/_PageMeta", Model)
+    @Html.Partial("Partial/_Meta", Model)
 }
 @Html.Partial("Partial/Teasers", Model.Teasers)
 
