--- a/CoreWeb/Views/Shared/Partial/_Meta.cshtml
+++ b/CoreWeb/Views/Shared/Partial/_Meta.cshtml
@@ -1,4 +1,4 @@
-@model Piranha.Models.PageBase
+@model Piranha.Models.IMeta
 
 @if (!string.IsNullOrEmpty(Model.MetaKeywords)) {
 <meta key="keywords" value="@Model.MetaKeywords">
